--- a/singleproduct.html
+++ b/singleproduct.html
@@ -36,6 +36,11 @@
       <div class="divider"></div>
       <div>
         <h3>Reviews</h3>
+        <div>
+          <p>reviewName</p>
+          <p>comment</p>
+          <p>rating</p>
+        </div>
       </div>
     </main>
     <footer></footer>
