opstart på index html og css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Forside</title>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/mvo3ooo.css" />
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <img
+        class="forsidebillede"
+        src="assets/img/dogukan-sahin-pLvaikQ6dSQ-unsplash.webp"
+        alt="produktbillede"
+      />
+      <h1>Favorits</h1>
+      <section class="favorits">
+        <div class="card">
+          <img src="lipstick.png" alt="Lipstick" />
+          <!-- Replace with actual image path -->
+          <h2>Product name</h2>
+          <p>Brand</p>
+          <p class="price">10 $</p>
+          <a href="#" class="button">Read more</a>
+        </div>
+      </section>
+      <div class="stripe">
+        <h3>Kocha Beauty Kocha Beauty Kocha Beauty Kocha</h3>
+      </div>
+      <section>
+        <div class="vision">
+          <h1>Our vision</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus,
+            quasi voluptates odit ullam earum placeat quaerat totam in, magni
+            incidunt expedita, doloribus fugit architecto reiciendis quibusdam
+            deleniti praesentium voluptatum nisi.
+          </p>
+        </div>
+        <div>
+          <img
+            class="photo-with-orange"
+            src="assets/img/nataliya-melnychuk-PdzMmdHqN2c-unsplash.webp"
+            alt="produktbillede"
+          />
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
+</html>
