--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         src="assets/img/dogukan-sahin-pLvaikQ6dSQ-unsplash.webp"
         alt="produktbillede"
       />
-      <h1>Favorits</h1>
+      <div>
+        <img class="icon1" src="assets/img/Untitled-1-05.svg" />
+        <h1>Favorits</h1>
+      </div>
       <section class="favorits">
         <div class="card">
           <img src="lipstick.png" alt="Lipstick" />
@@ -26,12 +29,15 @@
           <a href="#" class="button">Read more</a>
         </div>
       </section>
-      <div class="stripe">
+      <div class="orange-stripe">
         <h3>Kocha Beauty Kocha Beauty Kocha Beauty Kocha</h3>
       </div>
-      <section>
+      <div class="orangepath">
+        <img src="assets/img/orangepath.png" alt="" />
+      </div>
+      <section class="grid">
         <div class="vision">
-          <h1>Our vision</h1>
+          <h2>Our vision</h2>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus,
             quasi voluptates odit ullam earum placeat quaerat totam in, magni
@@ -39,14 +45,15 @@
             deleniti praesentium voluptatum nisi.
           </p>
         </div>
-        <div>
-          <img
-            class="photo-with-orange"
-            src="assets/img/nataliya-melnychuk-PdzMmdHqN2c-unsplash.webp"
-            alt="produktbillede"
-          />
-        </div>
+        <img
+          class="photo-with-orange"
+          src="assets/img/nataliya-melnychuk-PdzMmdHqN2c-unsplash.webp"
+          alt="produktbillede"
+        />
       </section>
+      <div class="green-stripe">
+        <h3>Kocha Beauty Kocha Beauty Kocha Beauty Kocha</h3>
+      </div>
     </main>
     <footer></footer>
   </body>
