laver media query på singleproduct

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -10,7 +10,7 @@
   <body>
     <header></header>
     <main>
-      <div>
+      <div class="grid_pic_text">
         <img
           class="product_pic"
           src="assets/img/peter-kalonji-LH74lRYvBY4-unsplash.webp"
@@ -20,9 +20,10 @@
           <h2>Product titel</h2>
           <p>Product brand</p>
           <p>Product price</p>
+          <button class="basket_button">Add to basket</button>
         </div>
-        <button class="basket_button">Add to basket</button>
-        <div class="product_info">
+
+        <div class="description_info">
           <h2>Description</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima esse
@@ -33,6 +34,7 @@
           </p>
         </div>
       </div>
+      <div></div>
       <div class="divider"></div>
       <div>
         <h3>Reviews</h3>
