--- a/productlist.html
+++ b/productlist.html
@@ -27,5 +27,8 @@
     <footer>
       <!-- MANGLER  -->
     </footer>
+    <script>
+      import { IconShoppingBag } from "icons";
+    </script>
   </body>
 </html>
