indsætter grøn steg i media query

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -35,6 +35,9 @@
         </div>
       </div>
       <div class="divider"></div>
+      <div class="divider_768px">
+        <img src="assets/img/greenLineNoText.svg" alt="Green Path" />
+      </div>
       <div>
         <h3>Reviews</h3>
         <div>
