indsætter grøn bjælke og css til den

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -38,13 +38,11 @@
       <div class="divider_768px">
         <img src="assets/img/greenLineNoText.svg" alt="Green Path" />
       </div>
-      <div>
-        <h3>Reviews</h3>
-        <div>
-          <p>reviewName</p>
-          <p>comment</p>
-          <p>rating</p>
-        </div>
+      <h3>Reviews</h3>
+      <div class="review">
+        <p>ReviewName</p>
+        <p>Comment</p>
+        <p>Rating</p>
       </div>
     </main>
     <footer></footer>
