indsætter info om en masse jeg har lavet her til morgen

--- a/index.html
+++ b/index.html
@@ -10,65 +10,54 @@
   <body>
     <header></header>
     <main>
-      <div class="image-container">
+      <!-- <div class="image-container">
         <img
           class="forsidebillede"
           src="assets/img/dogukan-sahin-pLvaikQ6dSQ-unsplash.webp"
           alt="produktbillede"
         />
-      </div>
-      <div>
-        <?xml version="1.0" encoding="UTF-8"?><svg
-          id="Layer_1"
-          xmlns="http://www.w3.org/2000/svg"
-          width="70"
-          height="70"
-          viewBox="0 0 70 70"
-        >
-          <path
-            d="M46.5,24c6.36-2.41,7.63,1.69,1,3.01.58,2.62,4.33,3.22,3.5,6.49-3.66.91-3.81-3.33-6.5-4-.22,1.25-.69,3.89-1.47,4.78-.53.61-2.19,1.07-2.53.72-.76-.77,1.2-5.29.99-5.5-1.48-.12-4.68,2.59-5.78,1.03-1.27-3.67,4.09-2.73,5.77-4.78-1.05-.91-7.49-5.77-5.99-7.25,1.89-1.86,7.16,5.1,7.99,4.5.93-1.78.8-7.41,3.7-6.46,1.98.65-.71,5.94-.69,7.45Z"
-            style="fill: #f26938"
-          />
-          <path
-            d="M41,51.5c5.53-2.24,5.36,2.31.5,3.01.51,2.11,3.07,2.88,2.5,5.49-2.44,1.52-4.42-3.79-5.49-3-.22.16-1.47,4.39-3.5,4l.5-4.49c-.56-.41-3.8,1.74-4.03-.76s3.8-1.89,4.04-3l-2.5-4.48c1.9-2.11,3.41.49,4.75,1.73,1.64-1.39.71-5.41,3.44-4.43,2.32.83-.64,5.31-.18,5.94Z"
-            style="fill: #f26938"
-          />
-          <path
-            d="M24.99,34c5.16-.95,5.47,3.24.5,3,2.26,4.91,0,6.05-3.25,2.01-2.93,5.96-6.39,4.58-3.25-1.51-5.93.91-6.98-3.56-.5-3.01.25-.22-3.07-6.18.99-4.24.85.41,1.24,1.95,2.5,1.74l1.82-3.47c3.78.32.96,3.11,1.19,5.47Z"
-            style="fill: #f26938"
-          />
-        </svg>
-        <?xml version="1.0" encoding="UTF-8"?><svg
-          id="Layer_1"
-          xmlns="http://www.w3.org/2000/svg"
-          width="70"
-          height="70"
-          viewBox="0 0 70 70"
-        >
-          <path
-            d="M52.42,47.91c-.36.22-2.01.22-2.34.02-1.17-.72,1.46-6.25,1.46-8.18.07-17.4-23.23-25.4-32.46-10.92-3.97,6.24-2.1,9.04-2.06,15.44.02,3.28-3.1,1.75-3.52-2.02-3.51-31.68,41.39-30.73,41.04-2.49-.02,1.34-1.26,7.64-2.12,8.16Z"
-            style="fill: #f26938"
-          />
-          <path
-            d="M43.04,46.96c-1.1-.65.77-3.77.93-4.74,1.6-10.15-7.07-18.81-16.99-13.49-6.44,3.45-5.85,10.55-4.97,16.78-2.96.84-3.26-1.76-3.5-4.26-1.98-20.8,26.51-23.8,28.49-3.49.21,2.13.1,11.58-3.95,9.2Z"
-            style="fill: #f26938"
-          />
-          <path
-            d="M30.37,30.11c7.96-1.25,11.13,6.93,10.09,13.6-.24,1.56-1.18,3.09-2.76,1.82-1.24-1-.17-2.73-.18-4.27-.04-4.78-2.49-10.04-8.03-7.52s-1.7,8.17-2.55,10.92c-.81,2.59-3.11-.41-3.4-2.46-.75-5.27.87-11.15,6.83-12.09Z"
-            style="fill: #f26938"
-          />
-        </svg>
+      </div> -->
+      <div class="icon-container">
+        <img
+          class="icon1"
+          src="assets/img/Iconer/Artboard 2_11.webp"
+          alt="icon"
+        />
         <h1>Favorits</h1>
+        <img
+          class="icon2"
+          src="assets/img/Iconer/Artboard 2_12.webp"
+          alt="icon"
+        />
       </div>
-      <section class="favorits">
-        <div class="card">
-          <img src="lipstick.png" alt="Lipstick" />
-          <!-- Replace with actual image path -->
-          <h2>Product name</h2>
-          <p>Brand</p>
-          <p class="price">10 $</p>
-          <a href="#" class="button">Read more</a>
-        </div>
+      <section class="container">
+        <article class="favorits">
+          <div class="card">
+            <img src="lipstick.png" alt="Lipstick" />
+            <h2>Product name</h2>
+            <p>Brand</p>
+            <p class="price">10 $</p>
+            <a href="#" class="button">Read more</a>
+          </div>
+        </article>
+        <article class="favorits">
+          <div class="card">
+            <img src="lipstick.png" alt="Lipstick" />
+            <h2>Product name</h2>
+            <p>Brand</p>
+            <p class="price">10 $</p>
+            <a href="#" class="button">Read more</a>
+          </div>
+        </article>
+        <article class="favorits">
+          <div class="card">
+            <img src="lipstick.png" alt="Lipstick" />
+            <h2>Product name</h2>
+            <p>Brand</p>
+            <p class="price">10 $</p>
+            <a href="#" class="button">Read more</a>
+          </div>
+        </article>
       </section>
 
       <div class="orange-stripe">
@@ -81,10 +70,19 @@
         <div class="vision">
           <h2>Our vision</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus,
-            quasi voluptates odit ullam earum placeat quaerat totam in, magni
-            incidunt expedita, doloribus fugit architecto reiciendis quibusdam
-            deleniti praesentium voluptatum nisi.
+            At Kocha, we believe that beauty should be accessible, inspiring,
+            and fun. Our mission is to create an online space where beauty
+            lovers can explore high-quality products without breaking the bank.
+            We cater to young women who are passionate about self-care but also
+            value affordability. Whether you’re a makeup enthusiast, a skincare
+            lover, or just looking for the perfect lipstick, our curated
+            selection brings you the best products from various brands at
+            budget-friendly prices. More than just a shop, Kocha is an
+            experience. We want our visitors to feel inspired, empowered, and
+            excited every time they browse our site. With a stylish and playful
+            design, easy navigation, and exclusive deals, we’re here to make
+            beauty shopping effortless and enjoyable. Join us in redefining
+            beauty—your way.
           </p>
         </div>
         <img
