--- a/productlist.html
+++ b/productlist.html
@@ -12,7 +12,15 @@
     <header>
       <!-- MANGLER  -->
     </header>
+
     <main id="productlist">
+      <div class="fixed-icon left-icon">
+        <img src="assets/img/Iconer/Artboard 2_11.webp" alt="stjerner" />
+      </div>
+
+      <div class="fixed-icon right-icon">
+        <img src="assets/img/Iconer/Artboard 2_12.webp" alt="stjerner" />
+      </div>
       <h1 class="product-category"></h1>
       <!-- <label for="filter">Filter by:</label>
       <select id="filter">
