laver rettelser i our vision tekst

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
           <p>
             At Kocha, we believe that beauty should be accessible, inspiring,
             and fun. Our mission is to create an online space where beauty
-            lovers can explore high-quality products without breaking the bank.
-            We cater to young women who are passionate about self-care but also
+            lovers can explore quality products without breaking the bank. We
+            cater to young women who are passionate about self-care but also
             value affordability. Whether you’re a makeup enthusiast, a skincare
             lover, or just looking for the perfect lipstick, our curated
             selection brings you the best products from various brands at
