--- a/header_footer.html
+++ b/header_footer.html
@@ -54,6 +54,7 @@
 
     <main>
       <h1>Overskrift</h1>
+      <p>hej</p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
         recusandae harum itaque quos animi odio ipsam dolorem eos aut aspernatur
