rykker på mappestruktur for css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside</title>
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="header_footer.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/header_footer.css" />
     <link rel="stylesheet" href="https://use.typekit.net/mvo3ooo.css" />
   </head>
   <body>
@@ -183,5 +183,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
