indsætter lidt media query

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/singleproduct.css" />
     <link rel="stylesheet" href="https://use.typekit.net/mvo3ooo.css" />
+    <link rel="stylesheet" href="css/header_footer.css" />
     <title>Product</title>
   </head>
   <body>
@@ -45,6 +46,54 @@
         <p>Rating</p>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer-info">
+        <div class="footer-section">
+          <h4>CUSTOMER SERVICE</h4>
+          <p>Questions & answers</p>
+          <p>Returns & complaints</p>
+        </div>
+
+        <div class="footer-section">
+          <h4>TERMS & SECURITY</h4>
+          <p>Terms of service</p>
+          <p>Privacy Policy</p>
+        </div>
+
+        <div class="footer-section">
+          <h4>ABOUT KOCHA</h4>
+          <p>Our vision</p>
+          <p>About the founder</p>
+          <p>Contact us</p>
+        </div>
+      </section>
+
+      <div class="footer-content">
+        <div class="footer-social">
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="assets/img/Iconer/instagram.svg" alt="Instagram" />
+          </a>
+
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="assets/img/Iconer/facebook.svg" alt="Facebook" />
+          </a>
+        </div>
+
+        <div class="footer-logo">
+          <img
+            src="assets/img/logo-favicon/logowhite.webp"
+            alt="Kocha Logo Hvid"
+          />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
