--- a/singleproduct.html
+++ b/singleproduct.html
@@ -47,7 +47,7 @@
       </div>
     </main>
     <footer>
-      <section class="footer-info">
+      <!-- <section class="footer-info">
         <div class="footer-section">
           <h4>CUSTOMER SERVICE</h4>
           <p>Questions & answers</p>
@@ -93,7 +93,7 @@
             alt="Kocha Logo Hvid"
           />
         </div>
-      </div>
+      </div> -->
     </footer>
   </body>
 </html>
