--- a/productlist.html
+++ b/productlist.html
@@ -6,7 +6,6 @@
     <title>Product List</title>
     <link rel="stylesheet" href="css/productlist.css" />
     <link rel="stylesheet" href="https://use.typekit.net/hux5wfd.css" />
-    <script src="js/productslist.js" defer></script>
   </head>
   <body>
     <header>
@@ -15,11 +14,11 @@
 
     <main id="productlist">
       <div class="fixed-icon left-icon">
-        <img src="assets/img/Iconer/Artboard 2_11.webp" alt="stjerner" />
+        <img src="assets/img/iconer/Artboard 2_11.webp" alt="stjerner" />
       </div>
 
       <div class="fixed-icon right-icon">
-        <img src="assets/img/Iconer/Artboard 2_12.webp" alt="stjerner" />
+        <img src="assets/img/coner/Artboard 2_12.webp" alt="stjerner" />
       </div>
       <h1 class="product-category"></h1>
       <!-- <label for="filter">Filter by:</label>
@@ -35,5 +34,6 @@
     <footer>
       <!-- MANGLER  -->
     </footer>
+    <script src="js/productslist.js"></script>
   </body>
 </html>
