--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
         <nav class="nav-menu">
           <ul>
-            <li><a href="productlist.html">Beauty</a></li>
-            <li><a href="productlist.html">Fragrances</a></li>
+            <li><a href="productlist.html?category=beauty">BEAUTY</a></li>
+            <li><a href="productlist.html?category=fragrance">FRAGRANCE</a></li>
             <li>
               <a href="index.html" class="logo">
                 <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
               </a>
             </li>
-            <li><a href="#">News</a></li>
+            <li><a href="#">NEWS</a></li>
           </ul>
         </nav>
       </div>
@@ -66,35 +66,8 @@
           alt="icon"
         />
       </div>
-      <section class="container">
-        <article class="favorits">
-          <div class="card">
-            <img src="lipstick.png" alt="Lipstick" />
-            <h2>Product name</h2>
-            <p>Brand</p>
-            <p class="price">10 $</p>
-            <a href="#" class="button">Read more</a>
-          </div>
-        </article>
-        <article class="favorits">
-          <div class="card">
-            <img src="lipstick.png" alt="Lipstick" />
-            <h2>Product name</h2>
-            <p>Brand</p>
-            <p class="price">10 $</p>
-            <a href="#" class="button">Read more</a>
-          </div>
-        </article>
-        <article class="favorits">
-          <div class="card">
-            <img src="lipstick.png" alt="Lipstick" />
-            <h2>Product name</h2>
-            <p>Brand</p>
-            <p class="price">10 $</p>
-            <a href="#" class="button">Read more</a>
-          </div>
-        </article>
-      </section>
+
+      <section class="product_list_container"></section>
 
       <div class="orange-stripe">
         <h3>Kocha Beauty Kocha Beauty Kocha Beauty Kocha</h3>
@@ -105,7 +78,7 @@
       <section class="grid">
         <div class="vision">
           <h2>Our vision</h2>
-          <p>
+          <p class="main-text">
             At Kochaa, we believe that beauty should be accessible, inspiring,
             and fun. Our mission is to create an online space where beauty
             lovers can explore quality products without breaking the bank. We
