--- a/header_footer.html
+++ b/header_footer.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="header_footer.css" />
-    <script src="js/header_footer.js" defer></script>
+    <link rel="stylesheet" href="css/header_footer.css" />
     <title>Header og footer</title>
   </head>
 
   <body>
     <header>
       <!-- Burger Menu -->
-      <div>
+      <div class="dektop-header">
         <input type="checkbox" id="burger-toggle" />
         <label for="burger-toggle" class="burger-menu">☰</label>
 
@@ -181,5 +180,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="js/header_footer.js"></script>
   </body>
 </html>
