--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       <section class="grid">
         <div class="vision">
           <h2>Our vision</h2>
+          <p>test</p>
           <p class="main-text">
             At Kochaa, we believe that beauty should be accessible, inspiring,
             and fun. Our mission is to create an online space where beauty
