indsætter ikoner på baggrund

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -11,6 +11,13 @@
   <body>
     <header></header>
     <main>
+      <div class="fixed-icon left-icon">
+        <img src="assets/img/iconer/Artboard 2_11.webp" alt="stjerner" />
+      </div>
+
+      <div class="fixed-icon right-icon">
+        <img src="assets/img/iconer/Artboard 2_12.webp" alt="stjerner" />
+      </div>
       <div class="grid_pic_text">
         <img
           class="product_pic"
@@ -47,7 +54,7 @@
       </div>
     </main>
     <footer>
-      <!-- <section class="footer-info">
+      <section class="footer-info">
         <div class="footer-section">
           <h4>CUSTOMER SERVICE</h4>
           <p>Questions & answers</p>
@@ -93,7 +100,7 @@
             alt="Kocha Logo Hvid"
           />
         </div>
-      </div> -->
+      </div>
     </footer>
   </body>
 </html>
