update på index for at path virker

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
       <div class="orange-stripe">
         <h3>Kocha Beauty Kocha Beauty Kocha Beauty Kocha</h3>
       </div>
-      <div class="orangepath">
-        <img src="assets/img/orangepath.png" alt="" />
-      </div>
+
+      <img class="orangepath" src="assets/img/orangepath.png" alt="" />
+
       <section class="grid">
         <div class="vision">
           <h2>Our vision</h2>
@@ -104,9 +104,8 @@
       <div class="green-stripe">
         <h3>Kocha Beauty Kocha Beauty Kocha Beauty Kocha</h3>
       </div>
-      <div class="greenpath">
-        <img src="assets/img/greenpath.png" alt="" />
-      </div>
+
+      <img class="greenpath" src="assets/img/greenpath.png" alt="" />
     </main>
     <footer>
       <section class="footer-info">
