--- a/header_footer.html
+++ b/header_footer.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <!-- Burger Menu -->
-      <div class="dektop-header">
+      <div>
         <input type="checkbox" id="burger-toggle" />
         <label for="burger-toggle" class="burger-menu">☰</label>
 
