--- a/productlist.html
+++ b/productlist.html
@@ -54,13 +54,14 @@
         <img src="assets/img/iconer/Artboard 2_12.webp" alt="rainbow" />
       </div>
       <h1 class="product-category"></h1>
-      <!-- <label for="filter">Filter by:</label>
-      <select id="filter">
-        <option value="all">All</option>
-        <option value="women">Women</option>
-        <option value="men">Men</option>
-        <option value="discount">Discounted items (excluding sold out)</option>
-      </select> -->
+
+      <div class="filter-container">
+        <select class="filter">
+          <option value="low-to-high">Lowest to Highest</option>
+          <option value="high-to-low">Highest to Lowest</option>
+          <option value="under-10">Only under $10</option>
+        </select>
+      </div>
 
       <section class="product_list_container"></section>
     </main>
