laver justeringer - forsidebilledet driller

--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
       </div>
     </header>
     <main>
-      <!-- <div class="image-container">
-        <img
-          class="forsidebillede"
-          src="assets/img/dogukan-sahin-pLvaikQ6dSQ-unsplash.webp"
-          alt="produktbillede"
-        />
-      </div> -->
+      <img
+        class="forsidebillede"
+        src="assets/img/dogukan-sahin-pLvaikQ6dSQ-unsplash.webp"
+        alt="forside photo"
+      />
+
       <div class="icon-container">
         <img
           class="icon1"
@@ -70,7 +69,12 @@
       <section class="product_list_container"></section>
 
       <div class="orange-stripe">
-        <h3>Kocha Beauty Kocha Beauty Kocha Beauty Kocha</h3>
+        <div class="scrolling-text">
+          <h3>
+            Kocha Beauty Kocha Beauty Kocha Beauty &nbsp; Kocha Beauty Kocha
+            Beauty Kocha Beauty &nbsp;
+          </h3>
+        </div>
       </div>
 
       <img class="orangepath" src="assets/img/orangepath.png" alt="" />
@@ -102,7 +106,12 @@
         />
       </section>
       <div class="green-stripe">
-        <h3>Kocha Beauty Kocha Beauty Kocha Beauty Kocha</h3>
+        <div class="scrolling-text">
+          <h3>
+            Kocha Beauty Kocha Beauty Kocha Beauty &nbsp; Kocha Beauty Kocha
+            Beauty Kocha Beauty &nbsp;
+          </h3>
+        </div>
       </div>
 
       <img class="greenpath" src="assets/img/greenpath.png" alt="" />
