--- a/header_footer.html
+++ b/header_footer.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/img/logo-favicon/favicon.ico" />
+
     <link rel="stylesheet" href="css/header_footer.css" />
     <title>Header og footer</title>
   </head>
@@ -28,14 +30,14 @@
         </nav>
       </div>
 
-      <!-- Logo -->
+      <!-- Logo til mobil-->
       <div>
         <a href="index.html" class="logo2">
           <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
         </a>
       </div>
 
-      <!-- Shopping Bag Icon -->
+      <!-- Shopping Bag -->
       <div>
         <img
           src="assets/img/Iconer/shopping-bag.svg"
@@ -132,7 +134,7 @@
     </main>
 
     <footer>
-      <section class="footer-info">
+      <div class="footer-info">
         <div class="footer-section">
           <h4>CUSTOMER SERVICE</h4>
           <p>Questions & answers</p>
@@ -151,7 +153,7 @@
           <p>About the founder</p>
           <p>Contact us</p>
         </div>
-      </section>
+      </div>
 
       <div class="footer-content">
         <div class="footer-social">
