--- a/index.html
+++ b/index.html
@@ -45,12 +45,17 @@
         />
       </div>
     </header>
+    <img
+      src="assets/img/forside-img.svg"
+      alt="forside-img"
+      class="header-image"
+    />
     <main>
-      <img
+      <!-- <img
         class="forsidebillede"
         src="assets/img/dogukan-sahin-pLvaikQ6dSQ-unsplash.webp"
         alt="forside photo"
-      />
+      /> -->
 
       <div class="icon-container">
         <img
