--- a/productlist.html
+++ b/productlist.html
@@ -115,5 +115,6 @@
       </div>
     </footer>
     <script src="js/productslist.js"></script>
+    <script src="js/header_footer.js"></script>
   </body>
 </html>
