updatet font mappem

--- a/productlist.html
+++ b/productlist.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product List</title>
     <link rel="stylesheet" href="css/productlist.css" />
+    <link rel="stylesheet" href="css/header_footer.css" />
     <link rel="stylesheet" href="https://use.typekit.net/hux5wfd.css" />
   </head>
   <body>
@@ -28,14 +29,14 @@
         </nav>
       </div>
 
-      <!-- Logo -->
+      <!-- Logo til mobil-->
       <div>
         <a href="index.html" class="logo2">
           <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
         </a>
       </div>
 
-      <!-- Shopping Bag Icon -->
+      <!-- Shopping Bag -->
       <div>
         <img
           src="assets/img/Iconer/shopping-bag.svg"
