ændre størrelser osv.

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -4,12 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/singleproduct.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/mvo3ooo.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/hux5wfd.css" />
     <link rel="stylesheet" href="css/header_footer.css" />
     <title>Product</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <!-- Burger Menu -->
+      <div>
+        <input type="checkbox" id="burger-toggle" />
+        <label for="burger-toggle" class="burger-menu">☰</label>
+
+        <nav class="nav-menu">
+          <ul>
+            <li><a href="productlist.html">Beauty</a></li>
+            <li><a href="productlist.html">Fragrances</a></li>
+            <li>
+              <a href="index.html" class="logo">
+                <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
+              </a>
+            </li>
+            <li><a href="#">News</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- Logo til mobil-->
+      <div>
+        <a href="index.html" class="logo2">
+          <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
+        </a>
+      </div>
+
+      <!-- Shopping Bag -->
+      <div>
+        <img
+          src="assets/img/Iconer/shopping-bag.svg"
+          alt="Shopping bag"
+          class="shopping-icon"
+        />
+      </div>
+    </header>
     <main>
       <div class="fixed-icon left-icon">
         <img src="assets/img/iconer/Artboard 2_11.webp" alt="stjerner" />
@@ -102,5 +137,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/header_footer.js"></script>
   </body>
 </html>
