--- a/index.html
+++ b/index.html
@@ -51,12 +51,6 @@
       class="header-image"
     />
     <main>
-      <!-- <img
-        class="forsidebillede"
-        src="assets/img/dogukan-sahin-pLvaikQ6dSQ-unsplash.webp"
-        alt="forside photo"
-      /> -->
-
       <div class="icon-container">
         <img
           class="icon1"
@@ -171,5 +165,6 @@
       </div>
     </footer>
     <script src="js/index.js"></script>
+    <script src="js/header_footer.js"></script>
   </body>
 </html>
