--- a/singleproduct.html
+++ b/singleproduct.html
@@ -59,7 +59,7 @@
           alt="Picture of product"
         />
         <div class="product_info">
-          <h2>Product titel</h2>
+          <h2 class="product_titel">Product titel</h2>
           <p>Product brand</p>
           <p>Product price</p>
           <button class="basket_button">Add to basket</button>
