--- a/singleproduct.html
+++ b/singleproduct.html
@@ -52,40 +52,7 @@
       <div class="fixed-icon right-icon">
         <img src="assets/img/iconer/Artboard 2_12.webp" alt="stjerner" />
       </div>
-      <div class="grid_pic_text">
-        <img
-          class="product_pic"
-          src="assets/img/peter-kalonji-LH74lRYvBY4-unsplash.webp"
-          alt="Picture of product"
-        />
-        <div class="product_info">
-          <h2 class="product_titel">Product titel</h2>
-          <p>Product brand</p>
-          <p>Product price</p>
-          <button class="basket_button">Add to basket</button>
-        </div>
-
-        <div class="description_info">
-          <h2>Description</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima esse
-            quasi ut, quos corrupti voluptatum adipisci libero quis dolores
-            dolore cumque deleniti ratione, eum id sunt. Animi dolore inventore,
-            aliquam in voluptatum ipsa quidem debitis nam sed, at consequatur?
-            Doloribus et ipsam sunt eos dolores asperiores ut, aut animi id?
-          </p>
-        </div>
-      </div>
-      <div class="divider"></div>
-      <div class="divider_768px">
-        <img src="assets/img/greenLineNoText.svg" alt="Green Path" />
-      </div>
-      <h3>Reviews</h3>
-      <div class="review">
-        <p>ReviewName</p>
-        <p>Comment</p>
-        <p>Rating</p>
-      </div>
+      <section class="product_container"></section>
     </main>
     <footer>
       <section class="footer-info">
@@ -136,6 +103,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/singleproduct.js"></script>
     <script src="js/header_footer.js"></script>
   </body>
 </html>
