tekst ovenpå forsidebillede

--- a/index.html
+++ b/index.html
@@ -45,11 +45,17 @@
         />
       </div>
     </header>
+
     <img
       src="assets/img/forside-img.svg"
       alt="forside-img"
       class="header-image"
     />
+    <div class="header-text">
+      <h4>Welcome</h4>
+      <h5>Your beauty your way</h5>
+    </div>
+
     <main>
       <div class="icon-container">
         <img
