--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div class="header-text">
       <h4>Welcome</h4>
       <h5>Your beauty your way</h5>
+      <h1>hej</h1>
     </div>
 
     <main>
