--- a/singleproduct.html
+++ b/singleproduct.html
@@ -53,6 +53,7 @@
         <img src="assets/img/iconer/Artboard 2_12.webp" alt="stjerner" />
       </div>
       <section class="product_container"></section>
+      <section class="review_container"></section>
     </main>
     <footer>
       <section class="footer-info">
