--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
 
-      <img class="orangepath" src="assets/img/orangepath.png" alt="" />
+      <img class="orangepath" src="assets/img/orangepath.svg" alt="" />
 
       <section class="grid">
         <div class="vision">
@@ -119,7 +119,7 @@
         </div>
       </div>
 
-      <img class="greenpath" src="assets/img/greenpath.png" alt="" />
+      <img class="greenpath" src="assets/img/greenpath.svg" alt="" />
     </main>
     <footer>
       <section class="footer-info">
