--- a/productlist.html
+++ b/productlist.html
@@ -47,11 +47,11 @@
 
     <main id="productlist">
       <div class="fixed-icon left-icon">
-        <img src="assets/img/iconer/Artboard 2_11.webp" alt="stars" />
+        <img src="assets/img/iconer/specialStar.webp" alt="stars" />
       </div>
 
       <div class="fixed-icon right-icon">
-        <img src="assets/img/iconer/Artboard 2_12.webp" alt="rainbow" />
+        <img src="assets/img/iconer/rainbow.webp" alt="rainbow" />
       </div>
       <h1 class="product-category"></h1>
 
