prøver at lave grid

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -46,11 +46,11 @@
     </header>
     <main>
       <div class="fixed-icon left-icon">
-        <img src="assets/img/iconer/Artboard 2_11.webp" alt="stjerner" />
+        <img src="assets/img/iconer/specialStar.webp" alt="stars" />
       </div>
 
       <div class="fixed-icon right-icon">
-        <img src="assets/img/iconer/Artboard 2_12.webp" alt="stjerner" />
+        <img src="assets/img/iconer/rainbow.webp" alt="rainbow" />
       </div>
       <section class="product_container"></section>
       <section class="review_container"></section>
