--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
         <nav class="nav-menu">
           <ul>
-            <li><a href="productlist.html?category=beauty">BEAUTY</a></li>
-            <li><a href="productlist.html?category=fragrance">FRAGRANCE</a></li>
+            <li><a href="productlist.html?category=beauty">Beauty</a></li>
+            <li><a href="productlist.html?category=fragrance">Fragrance</a></li>
             <li>
               <a href="index.html" class="logo">
                 <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
               </a>
             </li>
-            <li><a href="#">NEWS</a></li>
+            <li><a href="#">News</a></li>
           </ul>
         </nav>
       </div>
@@ -45,7 +45,7 @@
         />
       </div>
     </header>
-
+<div class="text-container">
     <img
       src="assets/img/forside-img.svg"
       alt="forside-img"
@@ -55,6 +55,7 @@
       <h5>Welcome</h4>
       <h6>Your beauty your way</h5>
     </div>
+</div>
 
     <main>
       <div class="icon-container">
