--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
       <div class="icon-container">
         <img
           class="icon1"
-          src="assets/img/Iconer/Artboard 2_11.webp"
+          src="assets/img/Iconer/specialStar.webp"
           alt="icon"
         />
         <h1>Favorits</h1>
         <img
           class="icon2"
-          src="assets/img/Iconer/Artboard 2_12.webp"
+          src="assets/img/Iconer/rainbow.webp"
           alt="icon"
         />
       </div>
