laver noget med produktbillederne

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h2>Our vision</h2>
 
           <p class="main-text">
-            At Kochaa, we believe that beauty should be accessible, inspiring,
+            At Kocha, we believe that beauty should be accessible, inspiring,
             and fun. Our mission is to create an online space where beauty
             lovers can explore quality products without breaking the bank. We
             cater to young women who are passionate about self-care but also
